--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 ::-moz-selection{background:#8494A3;color:#fff;text-shadow:none}
 ::selection{background:#8494A3;color:#fff;text-shadow:none}
 .container {
-    padding-top: 50px;
+    /*padding-top: 50px;*/
     margin: 50px auto !important;
 }
 .content {
